[gd_scene load_steps=17 format=3 uid="uid://c2xbpwxg7od2m"]

[ext_resource type="Script" path="res://scenes/session/canvas/canvas.gd" id="1_qqk25"]
[ext_resource type="Script" path="res://scenes/session/canvas/gridRenderer.gd" id="2_dclsh"]
[ext_resource type="Script" path="res://scenes/session/canvas/playersCam.gd" id="2_iyf7n"]
[ext_resource type="Script" path="res://scenes/session/canvas/gmCam.gd" id="3_dy7o5"]
[ext_resource type="Texture2D" uid="uid://b82yxfkv2mj4o" path="res://media/images/egnoroth_coast.webp" id="3_f5l8b"]
[ext_resource type="Script" path="res://scenes/session/canvas/assets.gd" id="3_rejrr"]
[ext_resource type="Script" path="res://scenes/session/canvas/playersCamControl.gd" id="5_b3mp6"]
[ext_resource type="Texture2D" uid="uid://b40rcpf2yfmkb" path="res://media/icons/empty.svg" id="7_ocr26"]
[ext_resource type="Texture2D" uid="uid://b5kj627ygsn0d" path="res://media/icons/settings.svg" id="7_s5uk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1vi8"]
draw_center = false
border_color = Color(1, 1, 1, 0.75)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c774q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n8atq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k45x5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1nurd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hv1v8"]
bg_color = Color(0, 0, 0, 0.74902)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccl74"]
bg_color = Color(0, 0, 0, 0.74902)
draw_center = false
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.74902)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="canvas" type="Control"]
visibility_layer = 511
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_qqk25")

[node name="playersWindow" type="Window" parent="."]
unique_name_in_owner = true
disable_3d = true
canvas_cull_mask = 4294965248
mode = 3
title = "Player's view"
position = Vector2i(0, 36)
size = Vector2i(1280, 720)
visible = false
unfocusable = true

[node name="playersCam" type="Camera2D" parent="playersWindow"]
unique_name_in_owner = true
script = ExtResource("2_iyf7n")

[node name="CanvasLayer" type="CanvasLayer" parent="playersWindow/playersCam"]
follow_viewport_enabled = true

[node name="passepartout" type="Panel" parent="playersWindow/playersCam/CanvasLayer"]
unique_name_in_owner = true
visibility_layer = 32768
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h1vi8")

[node name="screensaver" type="TextureRect" parent="playersWindow/playersCam/CanvasLayer"]
unique_name_in_owner = true
self_modulate = Color(0.2, 0.2, 0.2, 1)
visibility_layer = 32768
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.169312
offset_right = 0.169312
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_f5l8b")
expand_mode = 3
stretch_mode = 4

[node name="gridRenderer" type="Node2D" parent="."]
unique_name_in_owner = true
visibility_layer = 526335
z_index = 1
script = ExtResource("2_dclsh")

[node name="assets" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_rejrr")

[node name="gmCam" type="Camera2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_dy7o5")

[node name="CanvasLayer" type="CanvasLayer" parent="gmCam"]
follow_viewport_enabled = true

[node name="playersCamControl" type="Panel" parent="gmCam/CanvasLayer" node_paths=PackedStringArray("playersWindow")]
unique_name_in_owner = true
visibility_layer = 1024
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c774q")
script = ExtResource("5_b3mp6")
playersWindow = NodePath("../../../playersWindow")

[node name="passepartoutController" type="MarginContainer" parent="gmCam/CanvasLayer/playersCamControl"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController"]
visibility_layer = 1024
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="passepartoutLeft" type="ProgressBar" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
show_percentage = false

[node name="passepartoutSliderL" type="HSlider" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control"]
unique_name_in_owner = true
visible = false
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 10
theme_override_icons/grabber = ExtResource("7_ocr26")
theme_override_icons/grabber_highlight = ExtResource("7_ocr26")
theme_override_styles/slider = SubResource("StyleBoxEmpty_n8atq")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_k45x5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_1nurd")
step = 0.1
scrollable = false

[node name="Control2" type="Control" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="passepartoutRight" type="ProgressBar" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control2"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
fill_mode = 1
show_percentage = false

[node name="passepartoutSliderR" type="HSlider" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control2"]
unique_name_in_owner = true
visible = false
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 10
theme_override_icons/grabber = ExtResource("7_ocr26")
theme_override_icons/grabber_highlight = ExtResource("7_ocr26")
theme_override_styles/slider = SubResource("StyleBoxEmpty_n8atq")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_k45x5")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_1nurd")
step = 0.1
scrollable = false

[node name="picker" type="ColorPickerButton" parent="gmCam/CanvasLayer/playersCamControl/passepartoutController"]
unique_name_in_owner = true
visible = false
visibility_layer = 1024
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
color = Color(1, 1, 1, 0.75)

[node name="playersCamControl" type="VBoxContainer" parent="gmCam/CanvasLayer/playersCamControl"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="header" type="Panel" parent="gmCam/CanvasLayer/playersCamControl/playersCamControl"]
unique_name_in_owner = true
light_mask = 1024
visibility_layer = 1024
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_default_cursor_shape = 13
theme_override_styles/panel = SubResource("StyleBoxFlat_hv1v8")

[node name="Label" type="Label" parent="gmCam/CanvasLayer/playersCamControl/playersCamControl/header"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Player's view"

[node name="editButton" type="Button" parent="gmCam/CanvasLayer/playersCamControl/playersCamControl/header"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
grow_horizontal = 0
grow_vertical = 2
mouse_default_cursor_shape = 2
icon = ExtResource("7_s5uk8")
flat = true

[node name="Panel" type="Panel" parent="gmCam/CanvasLayer/playersCamControl/playersCamControl"]
visibility_layer = 1024
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ccl74")

[node name="yScale" type="VSlider" parent="gmCam/CanvasLayer/playersCamControl"]
unique_name_in_owner = true
visible = false
visibility_layer = 1024
custom_minimum_size = Vector2(30, 240)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -120.0
offset_right = 30.0
offset_bottom = 120.0
grow_horizontal = 0
grow_vertical = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 9
min_value = 0.1
max_value = 4.0
step = 0.05
value = 1.0
exp_edit = true

[node name="xScale" type="HSlider" parent="gmCam/CanvasLayer/playersCamControl"]
unique_name_in_owner = true
visible = false
visibility_layer = 1024
custom_minimum_size = Vector2(240, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -120.0
offset_right = 120.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 10
min_value = 0.1
max_value = 4.0
step = 0.05
value = 1.0

[connection signal="close_requested" from="playersWindow" to="." method="_on_playersWindow_close_requested"]
[connection signal="child_order_changed" from="assets" to="assets" method="updateOutliner"]
[connection signal="drag_ended" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control/passepartoutSliderL" to="gmCam/CanvasLayer/playersCamControl" method="_on_passepartoutSlider_drag_ended"]
[connection signal="value_changed" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control/passepartoutSliderL" to="gmCam/CanvasLayer/playersCamControl" method="_on_passepartoutSliderL_value_changed"]
[connection signal="drag_ended" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control2/passepartoutSliderR" to="gmCam/CanvasLayer/playersCamControl" method="_on_passepartoutSlider_drag_ended"]
[connection signal="value_changed" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/HBoxContainer/Control2/passepartoutSliderR" to="gmCam/CanvasLayer/playersCamControl" method="_on_passepartoutSliderR_value_changed"]
[connection signal="color_changed" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/picker" to="gmCam/CanvasLayer/playersCamControl" method="_on_picker_color_changed"]
[connection signal="popup_closed" from="gmCam/CanvasLayer/playersCamControl/passepartoutController/picker" to="gmCam/CanvasLayer/playersCamControl" method="_on_picker_popup_closed"]
[connection signal="pressed" from="gmCam/CanvasLayer/playersCamControl/playersCamControl/header/editButton" to="gmCam/CanvasLayer/playersCamControl" method="_on_editButton_pressed"]
[connection signal="value_changed" from="gmCam/CanvasLayer/playersCamControl/yScale" to="gmCam/CanvasLayer/playersCamControl" method="_on_scale_value_changed"]
[connection signal="value_changed" from="gmCam/CanvasLayer/playersCamControl/xScale" to="gmCam/CanvasLayer/playersCamControl" method="_on_scale_value_changed"]
